--- a/bootstrap/projeto-galeria/package.json
+++ b/bootstrap/projeto-galeria/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "bootstrap": "^4.6.1",
-    "copy-webpack-plugin": "^10.2.0",
+    "copy-webpack-plugin": "4.5.1",
     "cross-env": "5.1.5",
-    "css-loader": "^6.5.1",
+    "css-loader": "0.28.11",
     "file-loader": "1.1.11",
     "font-awesome": "4.7.0",
     "jquery": "^3.6.0",
