--- a/gulp/spa/package.json
+++ b/gulp/spa/package.json
@@ -11,20 +11,19 @@
   "author": "Cod3r",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-preset-env": "1.6.1",
-    "font-awesome": "4.7.0",
+    "@babel/preset-env": "^7.16.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "7.0.1",
+    "gulp-babel": "8.0.0",
     "gulp-concat": "2.6.1",
     "gulp-htmlmin": "4.0.0",
+    "gulp-sass": "^5.0.0",
     "gulp-uglify": "3.0.0",
     "gulp-uglifycss": "^1.1.0",
-    "gulp-util": "^1.0.0",
-    "gulp-watch": "^5.0.1",
-    "gulp-webserver": "^0.1.0"
-  },
-  "dependencies": {
-    "node-sass": "^7.0.0"
+    "gulp-watch": "^4.0.1",
+    "gulp-webserver": "^0.1.0",
+    "node-sass": "^7.0.1",
+    "sass": "^1.44.0"
   }
 }
