--- a/gulp/spa/package.json
+++ b/gulp/spa/package.json
@@ -14,16 +14,16 @@
     "@babel/preset-env": "^7.16.4",
     "babel-core": "^7.0.0-bridge.0",
     "font-awesome": "^4.7.0",
-    "gulp": "^3.9.1",
+    "gulp": "4.0.2",
     "gulp-babel": "8.0.0",
     "gulp-concat": "2.6.1",
     "gulp-htmlmin": "4.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "3.0.0",
     "gulp-uglifycss": "^1.1.0",
-    "gulp-watch": "^4.0.1",
-    "gulp-webserver": "^0.1.0",
-    "node-sass": "^7.0.1",
+    "gulp-watch": "5.0.1",
+    "gulp-webserver": "0.9.1",
+    "node-sass": "^6.0.1",
     "sass": "^1.44.0"
   }
 }
